--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "3000:3000"
     depends_on:
       - db
-      - redis
+      # - redis
       # - elasticsearch
     environment:
       MYSQL_HOST: ${MYSQL_HOST}
@@ -32,25 +32,25 @@ services:
     networks:
       - myapp-network
 
-  sidekiq:
-    build: .
-    command: bundle exec sidekiq -C config/sidekiq.yml
-    volumes:
-      - .:/app
-    depends_on:
-      - db
-      - redis
-    environment:
-      REDIS_URL: ${REDIS_URL}
-    networks:
-      - myapp-network
+  # sidekiq:
+  #   build: .
+  #   command: bundle exec sidekiq -C config/sidekiq.yml
+  #   volumes:
+  #     - .:/app
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   environment:
+  #     REDIS_URL: ${REDIS_URL}
+  #   networks:
+  #     - myapp-network
 
-  redis:
-    image: redis:7.0-alpine
-    ports:
-      - "6379:6379"
-    networks:
-      - myapp-network
+  # redis:
+  #   image: redis:7.0-alpine
+  #   ports:
+  #     - "6379:6379"
+  #   networks:
+  #     - myapp-network
 
   # elasticsearch:
   #   image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
